# hw3-Arhaan2

./: Makefile  README.md  myst.yml  pyproject.toml
.ipynb_checkpoints/: ai_documentation-checkpoint.txt  index-checkpoint.md  myst-checkpoint.yml
ligotools/: utils.py
ligotools.egg-info/: PKG-INFO  requires.txt
ligotools/tests/: test_readligo.py  test_utils.py
ligotools/tests/.ipynb_checkpoints/: test_readligo-checkpoint.py
