[build-system]
# Include numpy here to avoid the common "numpy not found" build error
requires = ["setuptools>=68", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ligotools"
version = "0.1.0"
description = "Helper tools for LIGO GW tutorial (Stats 159/259 HW)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Ligo Scientific Collaboration (LSC)" },
  { name = "Arhaan Aggarwal" }
]

dependencies = [
  "numpy~=2.0",
  "scipy~=1.13",
  "h5py~=3.12",
  "matplotlib~=3.9",
  "ipykernel~=6.29"
]


keywords = ["LIGO", "gravitational-waves", "tutorial"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/UCB-stat-159-f25/hw3-Arhaan2.git"
Issues = "https://github.com/UCB-stat-159-f25/hw3-Arhaan2.git/issues"

[tool.setuptools]
packages = ["ligotools"]

[project.optional-dependencies]
test = ["pytest>=7"]
